try fix overlay not showing in safari

--- a/assets/css/custom/upcoming.scss
+++ b/assets/css/custom/upcoming.scss
@@ -101,7 +101,6 @@ h1 {
   padding-bottom: 56.25%;
   /* 16:9 */
   min-height: 195px;
-  overflow: hidden;
   border-radius: 20px;
   background-color: white;
 
